--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-856.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 台湾-11.02MB/s(Youtube:不良林), server: 60.249.3.229, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-282.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63004, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.01MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-16.95MB/s(Youtube:不良林), server: hkbn.henyo.us, port: 44614, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: hkbn.henyo.us, skip-cert-verify: true}
   - {name: 🇩🇪 德国-3.41MB/s(Youtube:不良林), server: 5.183.179.139, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 🇩🇪 德国-3.74MB/s(Youtube:不良林), server: 5.183.179.139, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -66,7 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-856.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
