--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63004, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
-  - {name: 🇨🇳 中国-8.76MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.01MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-16.95MB/s(Youtube:不良林), server: hkbn.henyo.us, port: 44614, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: hkbn.henyo.us, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.41MB/s(Youtube:不良林), server: 5.183.179.139, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇩🇪 德国-3.74MB/s(Youtube:不良林), server: 5.183.179.139, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇨🇳 中国-386.7KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇰🇷 韩国-3.08MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇨🇳 中国-604.9KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in05.dns2333.xyz}}
+  - {name: 🇨🇳 中国-246.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇰🇷 韩国-3.04MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-667.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-16.95MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-386.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
