--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-3.08MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
-  - {name: 🇨🇳 中国-604.9KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63086, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in05.dns2333.xyz}}
-  - {name: 🇨🇳 中国-246.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20009, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇰🇷 韩国-3.04MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-667.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-585.2KB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63051, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: in03.dns2333.xyz}}
+  - {name: 🇰🇷 韩国-1.35MB/s(Youtube:不良林), server: v2-4.godlight.xyz, port: 26944, type: vmess, uuid: 07ea283e-bbe8-466f-a268-c5819763a9bf, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /g1641hvx, ws-headers: {Host: v2-4.godlight.xyz}}
+  - {name: 🇳🇱 荷兰-428.6KB/s(Youtube:不良林), server: 213.183.59.229, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-346.3KB/s(Youtube:不良林), server: 213.183.59.229, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63014, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in01.dns2333.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-3.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-246.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.04MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
