--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-585.2KB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63051, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: in03.dns2333.xyz}}
-  - {name: 🇰🇷 韩国-1.35MB/s(Youtube:不良林), server: v2-4.godlight.xyz, port: 26944, type: vmess, uuid: 07ea283e-bbe8-466f-a268-c5819763a9bf, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /g1641hvx, ws-headers: {Host: v2-4.godlight.xyz}}
-  - {name: 🇳🇱 荷兰-428.6KB/s(Youtube:不良林), server: 213.183.59.229, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-346.3KB/s(Youtube:不良林), server: 213.183.59.229, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63014, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.58MB/s(Youtube:不良林), server: 5.183.179.139, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-14.06MB/s(Youtube:不良林), server: guangzhou.kuli888.xyz, port: 52004, type: trojan, password: 54acbfdc-34ec-3d72-8182-3b437e4747eb, sni: guangzhou.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.44MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63051, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.78MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.59MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-585.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-428.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-346.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
